syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.salesfoce.apollo.stereotomy.services.grpc.proto";
option java_outer_classname = "StereotomyServicesProto";
option objc_class_prefix = "Stereo";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "util.proto";
import "stereotomy.proto";

package stereotomy.services;

// Context routing for Resolver

message IdentifierContext {
    utils.Digeste context = 1;
    stereotomy.Ident identifier = 2;
}

message EventContext {
    utils.Digeste context = 1;
    stereotomy.EventCoords coordinates = 2;
}

message KeyContext {
    utils.Digeste context = 1;
    stereotomy.KeyCoords coordinates = 2;
}

// Resolver API
service Resolver { 
    rpc kerl (IdentifierContext) returns (stereotomy.KERL) {}
    
    rpc lookup (IdentifierContext) returns (stereotomy.Binding) {}
    
    rpc resolve (IdentifierContext) returns (stereotomy.KeyState) {}
    rpc resolveCoords (EventContext) returns (stereotomy.KeyState) {}
}

message BindContext {
    utils.Digeste context = 1;
    stereotomy.Binding binding = 2;
}

message KERLContext {
    utils.Digeste context = 1;
    KERL kerl = 2;
}

message KeyEventContext {
    utils.Digeste context = 1;
    KeyEvent keyEvent = 2;
}


// Binding API for Resolver
service Binder {
    rpc bind(BindContext) returns(google.protobuf.Empty) {}
    rpc unbind(IdentifierContext) returns(google.protobuf.Empty) {}
    rpc publish(KERLContext) returns(google.protobuf.Empty) {}
    rpc append(KeyEventContext) returns(google.protobuf.Empty) {}
}
